Added favicon + sample css file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-  <head>
-    <title>-</title>
-  </head>
-  <body>
-    <p>Hello World</p>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="icon" href="assets/images/favicon.png">
+		<link rel="stylesheet" href="assets/styles/default.css">
+		<title>&#65279;</title>
+	</head>
+	</body>
 </html>
